Bug 545567 - [14][codegen] switch expression with try - java.lang.VerifyError: Inconsistent stackmap frames error
Change-Id: Ie62fe6bc58501a832e0bd3630fd955957d4081a2
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>